@@ -136,6 +136,9 @@ val target : string
 
 val print_config : out_channel -> unit;;
 
+val profiling : bool
+        (* Whether profiling with gprof is supported on this platform *)
+
 val flambda : bool
         (* Whether the compiler was configured for flambda *)
 
